Update knitted notebook

--- a/1.profile-cell-lines/0.inspect-profiles.md
+++ b/1.profile-cell-lines/0.inspect-profiles.md
@@ -7,6 +7,7 @@ June 2019
 
 ``` r
 library(ggplot2)
+library(glue)
 library(magrittr)
 library(tidyverse)
 ```
@@ -16,9 +17,23 @@ library(tidyverse)
 ### Read profiles
 
 ``` r
-profiles <- read_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_normalized_variable_selected.csv", progress = FALSE)
+profiles <- 
+  read_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_normalized_variable_selected.csv", 
+           progress = FALSE)
+
+profiles_isolated <- 
+  read_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_isolated_normalized_variable_selected.csv", 
+           progress = FALSE)
+
+profiles_colony <- 
+  read_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_colony_normalized_variable_selected.csv", 
+           progress = FALSE)
 
 variables <- str_subset(names(profiles), "^Cells|^Nuclei|^Cytoplasm")
+
+variables_isolated <- str_subset(names(profiles_isolated), "^Cells|^Nuclei|^Cytoplasm")
+
+variables_colony <- str_subset(names(profiles_colony), "^Cells|^Nuclei|^Cytoplasm")
 ```
 
 ``` r
@@ -83,10 +98,15 @@ metadata %>%
     ## 10               10     8
     ## # … with 38 more rows
 
+### Report replicates
+
 ``` r
-profiles %>%
+replicates_per_line <- 
+  profiles %>%
   group_by(Metadata_Plate, Metadata_line_ID) %>%
   tally()
+
+replicates_per_line
 ```
 
     ## # A tibble: 48 x 3
@@ -105,46 +125,96 @@ profiles %>%
     ## 10 cmqtlpl1.5-31-2019-mt               10     8
     ## # … with 38 more rows
 
+Verify that the number of replicates are same for colony and isolated
+profiles
+
+``` r
+compare::compare(
+  profiles_isolated %>%
+    group_by(Metadata_Plate, Metadata_line_ID) %>%
+    tally(),
+  replicates_per_line,
+  allowAll = TRUE
+)
+```
+
+    ## TRUE
+    ##   dropped attributes
+
+``` r
+compare::compare(
+  profiles_colony %>%
+    group_by(Metadata_Plate, Metadata_line_ID) %>%
+    tally(),
+  replicates_per_line,
+  allowAll = TRUE
+)
+```
+
+    ## TRUE
+    ##   dropped attributes
+
 ### Audits
 
-What is the median replicate correlation for each cell
-line?
+What is the median replicate correlation for each cell line? Do this
+across all types of profiles
 
 ``` r
-audit <- read_csv("../../../audit/2019_06_10_Batch3/cmQTL_plate1_5.31.2019_audit.csv")
-```
+audit_detailed_all <- tibble()
 
-    ## Parsed with column specification:
-    ## cols(
-    ##   plate_map_name = col_character(),
-    ##   null_threshold = col_double(),
-    ##   fraction_strong = col_double()
-    ## )
+audit_all <- tibble()
 
-``` r
-audit_detailed <- read_csv("../../../audit/2019_06_10_Batch3/cmQTL_plate1_5.31.2019_audit_detailed.csv")
-```
+for (profile_type_i in c("_colony", "_isolated", "")) {
+  audit <- read_csv(
+    glue(
+      "../../../audit/2019_06_10_Batch3/cmQTL_plate1_5.31.2019_audit{profile_type_i}.csv",
+      profile_type_i = profile_type_i
+    ),
+    col_types = cols(
+      plate_map_name = col_character(),
+      null_threshold = col_double(),
+      fraction_strong = col_double()
+    )
+  )
+  
+  audit_detailed <- read_csv(
+    glue(
+      "../../../audit/2019_06_10_Batch3/cmQTL_plate1_5.31.2019_audit{profile_type_i}_detailed.csv",
+      profile_type_i = profile_type_i
+    ),
+    col_types = cols(
+      Metadata_Plate_Map_Name = col_character(),
+      Metadata_line_ID = col_double(),
+      Metadata_plating_density = col_double(),
+      correlation = col_double()
+    )
+  )
+  
+  audit_detailed_all <- 
+    bind_rows(audit_detailed_all,
+              audit_detailed  %>% mutate(profile_type = profile_type_i))
+  audit_all <- 
+    bind_rows(audit_all,
+              audit %>% mutate(profile_type = profile_type_i))
+  
+}
 
-    ## Parsed with column specification:
-    ## cols(
-    ##   Metadata_Plate_Map_Name = col_character(),
-    ##   Metadata_line_ID = col_double(),
-    ##   Metadata_plating_density = col_double(),
-    ##   correlation = col_double()
-    ## )
-
-``` r
-p <- 
-  ggplot(audit_detailed,
-       aes(correlation)) + geom_histogram(binwidth = .05) +
-  geom_vline(xintercept = audit$null_threshold, color = "red") +
+p <-
+  ggplot(audit_detailed_all,
+         aes(correlation)) +
+  geom_histogram(binwidth = .05) +
+  geom_vline(aes(xintercept = null_threshold), audit_all) +
   xlab("Median pearson correlation between replicates") +
-  ggtitle("Distribution of replicate correlation across all cell lines (cmqtlpl1.5-31-2019-mt)")
+  facet_wrap(~profile_type, ncol = 1) +
+  ggtitle(
+    "Distribution of replicate correlation across all cell lines",
+    subtitle = "Vertical line indicates 95th percentile of null distribution."
+  )
 
-p
+print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-6-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
 
 ## Is cell plating density correlated with the order of plating a cell line?
 
@@ -163,7 +233,7 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
 
 ``` r
 out_file <- file.path("figures", "cmqtlpl1.5-31-2019-mt_layout.png")
@@ -212,7 +282,7 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
 
 ### Plot cell count vs cell id
 
@@ -233,65 +303,119 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
-
-``` r
-p <- 
-  ggplot(audit_detailed,
-       aes(as.factor(Metadata_line_ID), correlation)) + 
-  geom_col() +
-  xlab("cell line") + 
-  ylab("Median pearson correlation between replicates") +
-  ggtitle("Relationship between cell line id and replicate correlation (cmqtlpl1.5-31-2019-mt)",
-          subtitle = sprintf("Pearson correlation = %.2f",
-                             with(audit_detailed, cor(Metadata_line_ID, correlation))
-                             )
-          )
-p
-```
-
 ![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
-``` r
-df <- 
-  audit_detailed %>% 
-  inner_join(cell_count %>%
-               cytominer::aggregate(
-                 variables = c("Count_Cells"), 
-                 strata = c("Metadata_line_ID", "Metadata_plating_density"),
-                 operation = "median"),
-             by = c("Metadata_line_ID", "Metadata_plating_density"))
+## Is median replicate correlation correlated with other factors?
 
-p <- 
-  ggplot(df,
-       aes(Count_Cells, correlation)) + 
-  geom_point() +
-  xlab("Cell count") + 
+``` r
+df <-
+  audit_detailed_all %>%
+  inner_join(
+    cell_count %>%
+      cytominer::aggregate(
+        variables = c("Count_Cells"),
+        strata = c("Metadata_line_ID", "Metadata_plating_density"),
+        operation = "median"
+      ),
+    by = c("Metadata_line_ID", "Metadata_plating_density")
+  )
+```
+
+### Is median replicate correlation correlated with cell id?
+
+``` r
+p <-
+  ggplot(audit_detailed_all,
+         aes(as.factor(Metadata_line_ID), correlation)) +
+  geom_col() +
+  xlab("cell line") +
   ylab("Median pearson correlation between replicates") +
-  ggtitle("Relationship between cell count and replicate correlation (cmqtlpl1.5-31-2019-mt)",
-          subtitle = sprintf("Pearson correlation = %.2f",
-                             with(df, cor(Count_Cells, correlation))
-                             )
-          )
+  facet_wrap(~profile_type, ncol = 1) +
+  ggtitle("Relationship between cell line id and replicate correlation (cmqtlpl1.5-31-2019-mt)")
 
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-10-2.png)<!-- -->
-\#\#\# Attach cell count and replicate correlation to profiles and save
-gct
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+
+``` r
+audit_detailed_all %>%
+  group_by(profile_type) %>%
+  summarize(corval = cor(correlation, Metadata_line_ID)) 
+```
+
+    ## # A tibble: 3 x 2
+    ##   profile_type corval
+    ##   <chr>         <dbl>
+    ## 1 ""            0.150
+    ## 2 _colony       0.165
+    ## 3 _isolated     0.206
+
+### Is median replicate correlation correlated with cell plating density?
+
+``` r
+p <-
+  ggplot(df,
+         aes(Count_Cells, correlation)) +
+  geom_point() +
+  xlab("Cell count") +
+  ylab("Median pearson correlation between replicates") +
+  facet_wrap(~profile_type, ncol = 1) +
+  ggtitle("Relationship between cell count and replicate correlation (cmqtlpl1.5-31-2019-mt)")
+
+p
+```
+
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+
+``` r
+df %>%
+  group_by(profile_type) %>%
+  summarize(corval = cor(Count_Cells, correlation))
+```
+
+    ## # A tibble: 3 x 2
+    ##   profile_type corval
+    ##   <chr>         <dbl>
+    ## 1 ""           -0.272
+    ## 2 _colony      -0.363
+    ## 3 _isolated    -0.355
+
+### Attach cell count and replicate correlation to profiles and save gct
 
 ``` r
 augmented_profiles <-
   profiles %>% 
-  inner_join(df,
+  inner_join(df %>% filter(profile_type == ""),
+             c("Metadata_Plate_Map_Name", "Metadata_plating_density", "Metadata_line_ID")) %>%
+  rename(Metadata_correlation = correlation,
+         Metadata_Count_Cells = Count_Cells) %>%
+  select(matches("^Metadata_"), everything())
+
+augmented_profiles_isolated <-
+  profiles %>% 
+  inner_join(df %>% filter(profile_type == "_isolated"),
+             c("Metadata_Plate_Map_Name", "Metadata_plating_density", "Metadata_line_ID")) %>%
+  rename(Metadata_correlation = correlation,
+         Metadata_Count_Cells = Count_Cells) %>%
+  select(matches("^Metadata_"), everything())
+
+augmented_profiles_colony <-
+  profiles %>% 
+  inner_join(df %>% filter(profile_type == "_colony"),
              c("Metadata_Plate_Map_Name", "Metadata_plating_density", "Metadata_line_ID")) %>%
   rename(Metadata_correlation = correlation,
          Metadata_Count_Cells = Count_Cells) %>%
   select(matches("^Metadata_"), everything())
 
 augmented_profiles %>%
-  write_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_normalized_variable_selected_augmented.csv")
+ write_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_normalized_variable_selected_augmented.csv")
+
+augmented_profiles_isolated %>%
+ write_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_isolated_normalized_variable_selected_augmented.csv")
+
+augmented_profiles_colony %>%
+ write_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_colony_normalized_variable_selected_augmented.csv")
 ```
 
 ``` sh
@@ -301,30 +425,83 @@ Rscript csv2gct.R \
   ../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_normalized_variable_selected_augmented.csv \
   -o ../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_normalized_variable_selected_augmented.gct
 
+Rscript csv2gct.R \
+  ../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_isolated_normalized_variable_selected_augmented.csv \
+  -o ../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_isolated_normalized_variable_selected_augmented.gct
+
+Rscript csv2gct.R \
+  ../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_colony_normalized_variable_selected_augmented.csv \
+  -o ../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_colony_normalized_variable_selected_augmented.gct
+
 cd -
 ```
 
     ## Warning message:
     ## `data_frame()` is deprecated, use `tibble()`.
     ## [90mThis warning is displayed once per session.[39m 
+    ## Warning message:
+    ## `data_frame()` is deprecated, use `tibble()`.
+    ## [90mThis warning is displayed once per session.[39m 
+    ## Warning message:
+    ## `data_frame()` is deprecated, use `tibble()`.
+    ## [90mThis warning is displayed once per session.[39m 
     ## /Users/shsingh/work/projects/2018_06_05_cmQTL/workspace/software/2018_06_05_cmQTL/1.profile-cell-lines
 
-### Plate median replicate correlation on a plate map
+### Plot median replicate correlation on a plate map
 
 ``` r
-p <- 
-  platetools::raw_map(data = augmented_profiles$Metadata_correlation,
-                      well = augmented_profiles$Metadata_Well,
-                      plate = 384) +
-  
-  ggtitle("cmqtlpl1.5-31-2019-mt Median replicate correlation") +
+p <-
+  platetools::raw_map(
+    data = augmented_profiles$Metadata_correlation,
+    well = augmented_profiles$Metadata_Well,
+    plate = 384
+  ) +
+  ggtitle(
+      "cmqtlpl1.5-31-2019-mt Median replicate correlation ()"
+  ) +
   theme_dark() +
   scale_fill_continuous()
 
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
+
+``` r
+p <-
+  platetools::raw_map(
+    data = augmented_profiles_colony$Metadata_correlation,
+    well = augmented_profiles_colony$Metadata_Well,
+    plate = 384
+  ) +
+  ggtitle(
+      "cmqtlpl1.5-31-2019-mt Median replicate correlation (_colony)"
+  ) +
+  theme_dark() +
+  scale_fill_continuous()
+
+print(p)
+```
+
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-16-2.png)<!-- -->
+
+``` r
+p <-
+  platetools::raw_map(
+    data = augmented_profiles_isolated$Metadata_correlation,
+    well = augmented_profiles_isolated$Metadata_Well,
+    plate = 384
+  ) +
+  ggtitle(
+      "cmqtlpl1.5-31-2019-mt Median replicate correlation (_isolated)"
+  ) +
+  theme_dark() +
+  scale_fill_continuous()
+
+print(p)
+```
+
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-16-3.png)<!-- -->
 
 ## Does cell plating density drive similarities?
 
@@ -338,6 +515,21 @@ profiles %<>%
                        strata = c("Metadata_line_ID", "Metadata_plating_density"),
                        operation = "median")
 
+variables_colony <- str_subset(names(profiles_colony), "^Cells|^Nuclei|^Cytoplasm")
+
+profiles_colony %<>%
+  cytominer::aggregate(variables = variables_colony, 
+                       strata = c("Metadata_line_ID", "Metadata_plating_density"),
+                       operation = "median")
+
+variables_isolated <- str_subset(names(profiles_isolated), "^Cells|^Nuclei|^Cytoplasm")
+
+profiles_isolated %<>%
+  cytominer::aggregate(variables = variables_isolated, 
+                       strata = c("Metadata_line_ID", "Metadata_plating_density"),
+                       operation = "median")
+
+
 cell_count %<>%
   cytominer::aggregate(variables = c("Count_Cells"), 
                        strata = c("Metadata_line_ID", "Metadata_plating_density"),
@@ -347,50 +539,59 @@ cell_count %<>%
 ### Measure similarity between profiles
 
 ``` r
-# get data matrix
-data_matrix <-
-  profiles %>%
-  select(-matches("Metadata"))
+measure_profile_similarity <- function(profiles) {
+  # get data matrix
+  data_matrix <-
+    profiles %>%
+    select(-matches("Metadata"))
+  
+  # get metadata
+  metadata <-
+    profiles %>%
+    select(matches("Metadata")) %>%
+    rowid_to_column(var = "id")
+  
+  # measure similarities between treatments
+  similarity_i <- cor(t(data_matrix)) 
+  
+  colnames(similarity_i) <- seq(1, ncol(similarity_i))
+  
+  similarity_i %<>% 
+    as_tibble() %>% 
+    rowid_to_column(var = "id1") %>% 
+    gather(id2, correlation, -id1) %>% 
+    mutate(id2 = as.integer(id2)) %>%
+    filter(id1 > id2) %>% 
+    arrange(desc(correlation))
+  
+  # annotate the similarities data frame
+  similarity_i %<>%
+    inner_join(metadata %>% 
+                 select(id, 
+                        Metadata_line_ID,
+                        Metadata_plating_density), 
+               by = c("id1" = "id")) %>% 
+    rename(Metadata_line_ID1 = Metadata_line_ID, 
+           Metadata_plating_density1 = Metadata_plating_density)  %>%
+    inner_join(metadata %>% 
+                 select(id, 
+                        Metadata_line_ID,
+                        Metadata_plating_density), 
+               by = c("id2" = "id")) %>%
+    rename(Metadata_line_ID2 = Metadata_line_ID, 
+           Metadata_plating_density2 = Metadata_plating_density) %>% 
+    arrange(desc(correlation))
+}
+  
 
-# get metadata
-metadata <-
-  profiles %>%
-  select(matches("Metadata")) %>%
-  rowid_to_column(var = "id")
+similarity <- measure_profile_similarity(profiles)
 
-# measure similarities between treatments
-similarity <- cor(t(data_matrix)) 
+similarity_colony <- measure_profile_similarity(profiles_colony)
 
-colnames(similarity) <- seq(1, ncol(similarity))
-
-similarity %<>% 
-  as_tibble() %>% 
-  rowid_to_column(var = "id1") %>% 
-  gather(id2, correlation, -id1) %>% 
-  mutate(id2 = as.integer(id2)) %>%
-  filter(id1 > id2) %>% 
-  arrange(desc(correlation))
-
-# annotate the similarities data frame
-similarity %<>%
-  inner_join(metadata %>% 
-               select(id, 
-                      Metadata_line_ID,
-                      Metadata_plating_density), 
-             by = c("id1" = "id")) %>% 
-  rename(Metadata_line_ID1 = Metadata_line_ID, 
-         Metadata_plating_density1 = Metadata_plating_density)  %>%
-  inner_join(metadata %>% 
-               select(id, 
-                      Metadata_line_ID,
-                      Metadata_plating_density), 
-             by = c("id2" = "id")) %>%
-  rename(Metadata_line_ID2 = Metadata_line_ID, 
-         Metadata_plating_density2 = Metadata_plating_density) %>% 
-  arrange(desc(correlation))
+similarity_isolated <- measure_profile_similarity(profiles_isolated)
 ```
 
-### Measure absolute difference of cell counts between profiles
+### Measure *absolute difference* of cell counts between profiles
 
 ``` r
 # get data matrix
@@ -436,7 +637,7 @@ count_similarity %<>%
   arrange(desc(cell_count_abs_diff))
 ```
 
-### Measure average of cell counts of pairs of profiles
+### Measure *average* of cell counts of pairs of profiles
 
 ``` r
 # get data matrix
@@ -485,33 +686,42 @@ count_sum %<>%
 ### Combine
 
 ``` r
-similarity %<>% 
-  inner_join(count_similarity,
-             by = c("id1", 
-                    "id2", 
-                    "Metadata_line_ID1", 
-                    "Metadata_plating_density1", 
-                    "Metadata_line_ID2", 
-                    "Metadata_plating_density2")) %>%
-inner_join(count_sum,
-             by = c("id1", 
-                    "id2", 
-                    "Metadata_line_ID1", 
-                    "Metadata_plating_density1", 
-                    "Metadata_line_ID2", 
-                    "Metadata_plating_density2"))  
+combine_similarities <- function(similarity_i) {
+  similarity_i %<>% 
+    inner_join(count_similarity,
+               by = c("id1", 
+                      "id2", 
+                      "Metadata_line_ID1", 
+                      "Metadata_plating_density1", 
+                      "Metadata_line_ID2", 
+                      "Metadata_plating_density2")) %>%
+  inner_join(count_sum,
+               by = c("id1", 
+                      "id2", 
+                      "Metadata_line_ID1", 
+                      "Metadata_plating_density1", 
+                      "Metadata_line_ID2", 
+                      "Metadata_plating_density2")) 
+} 
+
+similarity %<>% combine_similarities()
+
+similarity_colony %<>% combine_similarities()
+
+similarity_isolated %<>% combine_similarities()
 ```
 
 ### Report relationship between profiles similarity and cell count similarity
 
 ``` r
-p <- 
-  ggplot(similarity, aes(correlation, cell_count_abs_diff, color = cell_count_sum)) + 
+p <-
+  ggplot(similarity, aes(correlation, cell_count_abs_diff, color = cell_count_sum)) +
   geom_point() +
   xlab("Pearson correlation between profiles") +
   ylab("Abs. difference between cell counts") +
-  ggtitle("Relationship between profiles similarity and cell count similarity",
-          subtitle = sprintf("Pearson correlation = %.2f",
+  xlim(-1.1, 1.1) +
+  ggtitle("Relationship between profiles similarity and cell count similarity ()",
+          subtitle = sprintf("Pearson correlation = %.3f",
                              with(similarity, cor(correlation, cell_count_abs_diff))
                              )
           )
@@ -519,7 +729,43 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-19-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-22-1.png)<!-- -->
+
+``` r
+p <- 
+  ggplot(similarity_colony, aes(correlation, cell_count_abs_diff, color = cell_count_sum)) + 
+  geom_point() +
+  xlab("Pearson correlation between profiles") +
+  ylab("Abs. difference between cell counts") +
+  xlim(-1.1, 1.1) +
+  ggtitle("Relationship between profiles similarity and cell count similarity (_colony)",
+          subtitle = sprintf("Pearson correlation = %.3f",
+                             with(similarity_colony, cor(correlation, cell_count_abs_diff))
+                             )
+          )
+
+p
+```
+
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-22-2.png)<!-- -->
+
+``` r
+p <- 
+  ggplot(similarity_isolated, aes(correlation, cell_count_abs_diff, color = cell_count_sum)) + 
+  geom_point() +
+  xlab("Pearson correlation between profiles") +
+  ylab("Abs. difference between cell counts") +
+  xlim(-1.1, 1.1) +
+  ggtitle("Relationship between profiles similarity and cell count similarity (_isolated)",
+          subtitle = sprintf("Pearson correlation = %.3f",
+                             with(similarity_isolated, cor(correlation, cell_count_abs_diff))
+                             )
+          )
+
+p
+```
+
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-22-3.png)<!-- -->
 
 ## Clustering analysis via Morpheus
 
@@ -564,4 +810,4 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-21-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-1.png)<!-- -->
