--- a/1.profile-cell-lines/0.inspect-profiles.md
+++ b/1.profile-cell-lines/0.inspect-profiles.md
@@ -16,6 +16,10 @@ library(tidyverse)
 
 ### Read profiles
 
+Read the 3 sets of profiles - all cells, only isolated, and only colony.
+See `generate-sc-profiles.sh` for details on how the latter two were
+generated.
+
 ``` r
 profiles <- 
   read_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_normalized_variable_selected.csv", 
@@ -28,13 +32,35 @@ profiles_isolated <-
 profiles_colony <- 
   read_csv("../../../backend/2019_06_10_Batch3/cmqtlpl1.5-31-2019-mt/cmqtlpl1.5-31-2019-mt_colony_normalized_variable_selected.csv", 
            progress = FALSE)
+```
 
+Each set of profiles will have a different set of features because
+feature selection was applied separately to each
+
+``` r
 variables <- str_subset(names(profiles), "^Cells|^Nuclei|^Cytoplasm")
 
 variables_isolated <- str_subset(names(profiles_isolated), "^Cells|^Nuclei|^Cytoplasm")
 
 variables_colony <- str_subset(names(profiles_colony), "^Cells|^Nuclei|^Cytoplasm")
 ```
+
+Report the size of feature spaces
+
+``` r
+tribble(~profile_type, ~feature_space,
+        "all", length(variables),
+        "isolated", length(variables_isolated),
+        "colony", length(variables_colony)
+)
+```
+
+    ## # A tibble: 3 x 2
+    ##   profile_type feature_space
+    ##   <chr>                <int>
+    ## 1 all                    431
+    ## 2 isolated               875
+    ## 3 colony                 506
 
 ``` r
 profiles %>% select(matches("Metadata_")) %>% head()
@@ -53,6 +79,9 @@ profiles %>% select(matches("Metadata_")) %>% head()
     ## #   Metadata_plating_density <dbl>, Metadata_line_ID <dbl>
 
 ### How many replicates?
+
+Report based on
+metadata
 
 ``` r
 metadata <- read_tsv("../../../metadata/2019_06_10_Batch3/platemap/cmQTL_plate1_5.31.2019.txt")
@@ -98,7 +127,7 @@ metadata %>%
     ## 10               10     8
     ## # … with 38 more rows
 
-### Report replicates
+Report based on profiles (should be identical)
 
 ``` r
 replicates_per_line <- 
@@ -214,7 +243,7 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-7-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
 
 ## Is cell plating density correlated with the order of plating a cell line?
 
@@ -233,7 +262,7 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
 
 ``` r
 out_file <- file.path("figures", "cmqtlpl1.5-31-2019-mt_layout.png")
@@ -282,9 +311,13 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
 
 ### Plot cell count vs cell id
+
+The cell line id corresponds to the order in which the cells were
+plated. We suspected that a longer settling time (i.e. smaller value of
+cell line id) was resulting in higher cell count.
 
 ``` r
 p <- 
@@ -303,7 +336,7 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-10-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
 
 ## Is median replicate correlation correlated with other factors?
 
@@ -336,28 +369,29 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-14-1.png)<!-- -->
 
 ``` r
 audit_detailed_all %>%
   group_by(profile_type) %>%
-  summarize(corval = cor(correlation, Metadata_line_ID)) 
+  summarize(`Pearson corr. between cell line id and replicate correlation` = cor(correlation, Metadata_line_ID)) 
 ```
 
     ## # A tibble: 3 x 2
-    ##   profile_type corval
-    ##   <chr>         <dbl>
-    ## 1 ""            0.150
-    ## 2 _colony       0.165
-    ## 3 _isolated     0.206
+    ##   profile_type `Pearson corr. between cell line id and replicate correlati…
+    ##   <chr>                                                               <dbl>
+    ## 1 ""                                                                  0.150
+    ## 2 _colony                                                             0.165
+    ## 3 _isolated                                                           0.206
 
-### Is median replicate correlation correlated with cell plating density?
+### Is median replicate correlation correlated with cell count?
 
 ``` r
 p <-
   ggplot(df,
          aes(Count_Cells, correlation)) +
   geom_point() +
+  geom_smooth(method = "lm") +
   xlab("Cell count") +
   ylab("Median pearson correlation between replicates") +
   facet_wrap(~profile_type, ncol = 1) +
@@ -366,24 +400,27 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
 
 ``` r
 df %>%
   group_by(profile_type) %>%
-  summarize(corval = cor(Count_Cells, correlation))
+  summarize(`Pearson corr. between cell count and replicate correlation` = cor(Count_Cells, correlation))
 ```
 
     ## # A tibble: 3 x 2
-    ##   profile_type corval
-    ##   <chr>         <dbl>
-    ## 1 ""           -0.272
-    ## 2 _colony      -0.363
-    ## 3 _isolated    -0.355
+    ##   profile_type `Pearson corr. between cell count and replicate correlation`
+    ##   <chr>                                                               <dbl>
+    ## 1 ""                                                                 -0.272
+    ## 2 _colony                                                            -0.363
+    ## 3 _isolated                                                          -0.355
 
 ### Attach cell count and replicate correlation to profiles and save gct
 
 ``` r
+# It becomes messier to use a single data frame for all profiles this point onwards, so repeat code chunks for each profile type
+# (perhaps storing them in a list would make it easier to loop, but skipping that for now)
+
 augmented_profiles <-
   profiles %>% 
   inner_join(df %>% filter(profile_type == ""),
@@ -465,7 +502,7 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-18-1.png)<!-- -->
 
 ``` r
 p <-
@@ -483,7 +520,7 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-16-2.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-18-2.png)<!-- -->
 
 ``` r
 p <-
@@ -501,7 +538,7 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-16-3.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-18-3.png)<!-- -->
 
 ## Does cell plating density drive similarities?
 
@@ -582,7 +619,6 @@ measure_profile_similarity <- function(profiles) {
            Metadata_plating_density2 = Metadata_plating_density) %>% 
     arrange(desc(correlation))
 }
-  
 
 similarity <- measure_profile_similarity(profiles)
 
@@ -683,7 +719,12 @@ count_sum %<>%
   arrange(desc(cell_count_sum))
 ```
 
-### Combine
+### Combine profiles similarity and cell count similarity into a single data frame
+
+Note that the cell counts here are that of all cells from the well, not
+that of each profile type (i.e. we don’t computer cell counts for
+`isolated` and `colony`, we just use the cell counts for the whole well)
+We should revisit whether this is the right approach.
 
 ``` r
 combine_similarities <- function(similarity_i) {
@@ -720,7 +761,7 @@ p <-
   xlab("Pearson correlation between profiles") +
   ylab("Abs. difference between cell counts") +
   xlim(-1.1, 1.1) +
-  ggtitle("Relationship between profiles similarity and cell count similarity ()",
+  ggtitle("Relationship between profiles similarity and cell count similarity (all)",
           subtitle = sprintf("Pearson correlation = %.3f",
                              with(similarity, cor(correlation, cell_count_abs_diff))
                              )
@@ -729,7 +770,7 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-22-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-1.png)<!-- -->
 
 ``` r
 p <- 
@@ -738,7 +779,7 @@ p <-
   xlab("Pearson correlation between profiles") +
   ylab("Abs. difference between cell counts") +
   xlim(-1.1, 1.1) +
-  ggtitle("Relationship between profiles similarity and cell count similarity (_colony)",
+  ggtitle("Relationship between profiles similarity and cell count similarity (colony)",
           subtitle = sprintf("Pearson correlation = %.3f",
                              with(similarity_colony, cor(correlation, cell_count_abs_diff))
                              )
@@ -747,7 +788,7 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-22-2.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-2.png)<!-- -->
 
 ``` r
 p <- 
@@ -756,7 +797,7 @@ p <-
   xlab("Pearson correlation between profiles") +
   ylab("Abs. difference between cell counts") +
   xlim(-1.1, 1.1) +
-  ggtitle("Relationship between profiles similarity and cell count similarity (_isolated)",
+  ggtitle("Relationship between profiles similarity and cell count similarity (isolated)",
           subtitle = sprintf("Pearson correlation = %.3f",
                              with(similarity_isolated, cor(correlation, cell_count_abs_diff))
                              )
@@ -765,7 +806,7 @@ p <-
 p
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-22-3.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-3.png)<!-- -->
 
 ## Clustering analysis via Morpheus
 
@@ -810,4 +851,4 @@ p <-
 print(p)
 ```
 
-![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-24-1.png)<!-- -->
+![](0.inspect-profiles_files/figure-gfm/unnamed-chunk-26-1.png)<!-- -->
